puppet/testdata/annotator/v4/escapedQuoteOnIncompleteString.pp
$var = <error descr="Closing quote missing">'test\\\\\'</error>